--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "io.milkpp.kofes.myapplication"
         minSdkVersion 26
         targetSdkVersion 28
-        versionCode 4
-        versionName "0.1.1"
+        versionCode 7
+        versionName "0.2.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,15 +23,24 @@ android {
     }
 }
 
+ext {
+    android_support_libraries_version = "28.0.0"
+}
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation "com.android.support:support-v4:$android_support_libraries_version"
+    implementation "com.android.support:support-media-compat:$android_support_libraries_version"
+    implementation "com.android.support:customtabs:$android_support_libraries_version"
+    implementation "com.android.support:appcompat-v7:$android_support_libraries_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-ads:17.1.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-ads:17.1.2'
 }
