--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/my_icon"
+            android:icon="@mipmap/my_ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/my_icon"
+            android:roundIcon="@mipmap/my_ic_launcher"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" android:screenOrientation="portrait">
@@ -21,7 +21,7 @@
         </activity>
         <meta-data
                 android:name="com.google.android.gms.ads.APPLICATION_ID"
-                android:value="ca-app-pub-3940256099942544~3347511713"/>
+                android:value="@string/admob_app_id"/>
     </application>
 
 </manifest>
